--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "license": "MIT",
   "description": "",
   "scripts": {
+    "test": "webpack-dev-server --config test/webpack.config.js",
     "devServer": "webpack-dev-server --config webpack.dev.js",
     "validateManifest": "validate-office-addin manifest.xml",
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
     "@microsoft/office-js": "^1.1.10",
+    "@types/mocha": "^5.2.6",
     "@types/office-js": "0.0.166",
     "@types/papaparse": "^4.5.9",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
+    "assert": "^1.4.1",
     "html-webpack-plugin": "^3.2.0",
+    "mocha": "^6.0.2",
     "office-addin-validator": "^1.0.5",
     "office-ui-fabric-react": "^6.152.1",
     "papaparse": "^4.6.3",
