--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "webpack-dev-server --config test/webpack.config.js",
     "devServer": "webpack-dev-server --config webpack.dev.js",
-    "validateManifest": "validate-office-addin manifest.xml",
+    "validateManifest": "validate-office-addin manifests/manifestDev.xml",
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
