--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@ node_modules
 .idea/inspectionProfiles/Project_Default.xml
 .nyc_output
 **/*.js
+**/*.js.map
 !webpack.*.js
 !test/populateTests.js
-**/*.js.map
-!src/definitions.d.ts
+!.eslintrc.js
 build
 test/index.ts
