--- a/package.json
+++ b/package.json
@@ -13,15 +13,12 @@
   },
   "dependencies": {
     "@microsoft/office-js": "^1.1.10",
-    "@types/mocha": "^5.2.6",
     "@types/office-js": "0.0.166",
     "@types/papaparse": "^4.5.9",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "assert": "^1.4.1",
     "html-webpack-plugin": "^3.2.0",
-    "mocha": "^6.0.2",
-    "office-addin-validator": "^1.0.5",
     "office-ui-fabric-react": "^6.152.1",
     "papaparse": "^4.6.3",
     "react": "^16.8.4",
@@ -30,11 +27,14 @@
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
+    "@types/mocha": "^5.2.6",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
-    "eslint": "^5.15.1"
+    "eslint": "^5.15.1",
+    "mocha": "^6.0.2",
+    "office-addin-validator": "^1.0.5",
+    "webpack-dev-server": "^3.2.1"
   }
 }
