--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "description": "",
   "scripts": {
-    "test": "webpack-dev-server --config test/webpack.config.js",
+    "test": "ts-mocha -p tsconfig.json **/*.test.ts **/*.test.tsx",
     "lint": "eslint .",
     "devServer": "webpack-dev-server --config webpack.dev.js",
     "validateManifest": "validate-office-addin manifests/manifestDev.xml",
@@ -38,6 +38,7 @@
     "eslint": "^5.15.1",
     "mocha": "^6.0.2",
     "office-addin-validator": "^1.0.5",
+    "ts-mocha": "^6.0.0",
     "webpack-dev-server": "^3.2.1"
   }
 }
