--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "description": "",
   "scripts": {
-    "test": "ts-mocha -p tsconfig.json **/*.test.ts **/*.test.tsx",
+    "test": "ts-mocha -p tsconfig.json -r test/setup.ts **/*.test.ts **/*.test.tsx",
     "lint": "eslint .",
     "devServer": "webpack-dev-server --config webpack.dev.js",
     "validateManifest": "validate-office-addin manifests/manifestDev.xml",
