--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/enzyme": "^3.9.0",
     "@types/mocha": "^5.2.6",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
+    "@typescript-eslint/typescript-estree": "^1.4.2",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
     "eslint": "^5.15.1",
