--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/enzyme": "^3.9.0",
     "@types/mocha": "^5.2.6",
+    "@types/sinon": "^7.0.10",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
     "@typescript-eslint/typescript-estree": "^1.4.2",
@@ -40,6 +41,7 @@
     "eslint": "^5.15.1",
     "mocha": "^6.0.2",
     "office-addin-validator": "^1.0.5",
+    "sinon": "^7.2.7",
     "ts-mocha": "^6.0.0",
     "webpack-dev-server": "^3.2.1"
   }
