--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@microsoft/office-js": "^1.1.10",
+    "@types/file-saver": "^2.0.0",
     "@types/office-js": "0.0.166",
     "@types/papaparse": "^4.5.9",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "assert": "^1.4.1",
+    "file-saver": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "office-ui-fabric-react": "^6.152.1",
     "papaparse": "^4.6.3",
