--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "description": "",
   "scripts": {
-    "test": "ts-mocha $NODE_DEBUG_OPTION -p tsconfig.json -r test/setup.ts **/*.test.ts **/*.test.tsx",
+    "test": "ts-mocha $NODE_DEBUG_OPTION -p tsconfig.json -r ignore-styles,test/setup.ts **/*.test.ts **/*.test.tsx",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "devServer": "webpack-dev-server --config webpack.dev.js",
     "validateManifest": "validate-office-addin manifests/manifestDev.xml",
@@ -19,6 +19,7 @@
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "css-loader": "^2.1.1",
     "file-saver": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "office-ui-fabric-react": "^6.152.1",
@@ -26,6 +27,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
+    "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
@@ -44,6 +46,7 @@
     "enzyme-adapter-react-16": "^1.10.0",
     "eslint": "^5.15.1",
     "eslint-plugin-react": "^7.12.4",
+    "ignore-styles": "^5.0.1",
     "mocha": "^6.0.2",
     "office-addin-validator": "^1.0.5",
     "sinon": "^7.2.7",
