--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "copy-webpack-plugin": "^5.0.1",
     "css-loader": "^2.1.1",
     "file-saver": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
