--- a/package.json
+++ b/package.json
@@ -18,16 +18,15 @@
     "@types/papaparse": "^4.5.9",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
-    "@types/react-router-dom": "^4.3.1",
     "copy-webpack-plugin": "^5.0.1",
     "css-loader": "^2.1.1",
     "file-saver": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "office-ui-fabric-react": "^6.152.1",
     "papaparse": "^4.6.3",
+    "query-string": "^6.4.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-router-dom": "^4.3.1",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3333",
