--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ts-mocha $NODE_DEBUG_OPTION -p tsconfig.json -r ignore-styles,test/setup.ts **/*.test.ts **/*.test.tsx",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "devServer": "webpack-dev-server --config webpack.dev.js",
-    "validateManifest": "validate-office-addin manifests/manifestDev.xml",
+    "validateManifest": "validate-office-addin manifests/manifestDev.xml && validate-office-addin manifests/manifestProd.xml",
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
