--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "description": "",
   "scripts": {
-    "test": "ts-mocha $NODE_DEBUG_OPTION -p tsconfig.json -r ignore-styles,test/setup.ts **/*.test.ts **/*.test.tsx",
+    "test": "ts-mocha $NODE_DEBUG_OPTION -p tsconfig.json -r test/setup.ts **/*.test.ts **/*.test.tsx",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "devServer": "webpack-dev-server --config webpack.dev.js",
     "validateManifest": "validate-office-addin manifests/manifestDev.xml && validate-office-addin manifests/manifestProd.xml",
@@ -47,6 +47,8 @@
     "eslint": "^5.15.1",
     "eslint-plugin-react": "^7.12.4",
     "ignore-styles": "^5.0.1",
+    "jsdom": "^14.0.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^6.0.2",
     "office-addin-validator": "^1.0.5",
     "sinon": "^7.2.7",
