--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "MIT",
   "description": "",
   "scripts": {
-    "test": "ts-mocha $NODE_DEBUG_OPTION -p tsconfig.json -r ignore-styles,test/setup.ts **/*.test.ts **/*.test.tsx",
+    "test": "TS_NODE_FILES=true mocha $NODE_DEBUG_OPTION -r ts-node/register,test/setup.ts **/*.test.ts **/*.test.tsx",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "devServer": "webpack-dev-server --config webpack.dev.js",
-    "validateManifest": "validate-office-addin manifests/manifestDev.xml",
+    "validateManifest": "validate-office-addin manifests/manifestDev.xml && validate-office-addin manifests/manifestProd.xml",
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
@@ -47,10 +47,12 @@
     "eslint": "^5.15.1",
     "eslint-plugin-react": "^7.12.4",
     "ignore-styles": "^5.0.1",
+    "jsdom": "^14.0.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^6.0.2",
     "office-addin-validator": "^1.0.5",
     "sinon": "^7.2.7",
-    "ts-mocha": "^6.0.0",
+    "ts-node": "^8.0.3",
     "webpack-dev-server": "^3.2.1"
   }
 }
