--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint --ext .js,.ts,.tsx .",
     "devServer": "webpack-dev-server --config webpack.dev.js",
     "validateManifest": "validate-office-addin manifests/manifestDev.xml && validate-office-addin manifests/manifestProd.xml",
-    "build": "webpack --config webpack.prod.js"
+    "build": "rm -rf build && webpack --config webpack.prod.js"
   },
   "dependencies": {
     "@microsoft/office-js": "^1.1.10",
