--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "mocha": "^6.0.2",
     "nyc": "^13.3.0",
     "office-addin-validator": "^1.0.5",
+    "retrace": "^1.0.0",
     "sinon": "^7.2.7",
     "source-map-support": "^0.5.11",
     "ts-node": "^8.0.3",
