--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "es2018"
     ],
     "jsx": "react",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "resolveJsonModule": true
   }
 }
