--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,7 @@ node_modules
 !webpack.*.js
 !.eslintrc.js
 !src/components/generateEncodingList.js
+!src/retrace.js
+!src/copyLocaleFile.js
 build
+.nyc_output
