--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@babel/core": "^7.4.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/polyfill": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
@@ -25,6 +27,7 @@
     "@types/react-router-dom": "^4.3.1",
     "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^5.0.1",
+    "core-js": "^3.0.0",
     "css-loader": "^2.1.1",
     "file-saver": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -67,9 +70,6 @@
     "ts-node": "^8.0.3",
     "webpack-dev-server": "^3.2.1"
   },
-  "browserslist": [
-    "ie 11"
-  ],
   "nyc": {
     "extension": [
       ".ts",
