--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@ node_modules
 !src/components/generateEncodingList.js
 !src/retrace.js
 !src/copyLocaleFile.js
+!src/createLargeCSV.js
 build
 .nyc_output
