--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,10 @@ node_modules
 **/*.js.map
 !webpack.*.js
 !.eslintrc.js
-!src/components/generateEncodingList.js
+!.babelrc.js
 !src/retrace.js
-!src/copyLocaleFile.js
+!src/createLargeCSV.js
+!src/components/generateEncodingList.js
+!src/locale/copyLocaleFile.js
 build
 .nyc_output
