--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "excel-csv-import",
   "version": "0.0.0",
-  "author": "Makoto Emura",
+  "repository": "https://github.com/Emurasoft/excel-csv-import.git",
+  "author": "Makoto",
   "license": "MIT",
-  "description": "",
   "scripts": {
     "test": "TS_NODE_FILES=true TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' mocha $NODE_DEBUG_OPTION -r ts-node/register,test/setup.ts **/*.test.ts **/*.test.tsx",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "devServer": "webpack-dev-server --config webpack.dev.js",
     "validateManifest": "validate-office-addin manifests/manifestDev.xml && validate-office-addin manifests/manifestProd.xml",
-    "build": "rm -rf build && webpack --config webpack.prod.js"
+    "build": "rm -rf build && webpack --config webpack.prod.js",
+    "generateLicensesText": "echo 'export default `'\"$(yarn licenses generate-disclaimer | tail -n +7 | sed -e 's/`/\\\\`/g')\"'`;' > src/licenses/thirdParty.ts"
   },
   "dependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/polyfill": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
     "@microsoft/office-js": "^1.1.10",
     "@types/file-saver": "^2.0.0",
     "@types/office-js": "0.0.166",
@@ -19,14 +24,16 @@
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^5.0.1",
+    "core-js": "^3.0.0",
     "css-loader": "^2.1.1",
     "file-saver": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "i18next": "^15.0.7",
     "office-ui-fabric-react": "^6.152.1",
     "papaparse": "^4.6.3",
-    "query-string": "^6.4.0",
+    "query-string": "^5.1.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-i18next": "^10.5.3",
@@ -58,7 +65,6 @@
     "office-addin-validator": "^1.0.5",
     "retrace": "^1.0.0",
     "sinon": "^7.2.7",
-    "source-map-support": "^0.5.11",
     "ts-node": "^8.0.3",
     "webpack-dev-server": "^3.2.1"
   },
