--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: node_js
 script:
   - npm run test
   - npm run lint
+  - npm run validateManifest
 
 before_deploy:
   - src/setVersion.sh $TRAVIS_TAG
