--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "eslint --ext .js,.ts,.tsx .",
     "devServer": "webpack-dev-server --config webpack.dev.js",
     "validateManifest": "validate-office-addin manifests/dev.manifest.xml && validate-office-addin manifests/prod.manifest.xml",
-    "build": "rm -rf build && webpack --config webpack.prod.js",
-    "generateLicensesText": "echo 'export default `'\"$(yarn licenses generate-disclaimer | tail -n +7 | sed -e 's/`/\\\\`/g')\"'`;' > src/licenses/thirdParty.ts"
+    "build": "rm -rf build && webpack --config webpack.prod.js"
   },
   "dependencies": {
     "@babel/core": "^7.4.0",
