--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
+    "source-map": "^0.7.3",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.4.5",
     "typescript": "^3.8.3",
@@ -60,7 +61,6 @@
     "mocha": "^6.2.3",
     "nyc": "^14.1.1",
     "office-addin-validator": "^1.0.5",
-    "retrace": "^1.0.0",
     "sinon": "^7.5.0",
     "ts-node": "^8.8.1",
     "webpack-dev-server": "^3.10.3"
