--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,8 @@ node_modules
 !webpack.*.js
 !.eslintrc.js
 !.babelrc.js
-!src/retrace.js
+!src/sourceMap.js
 !src/createLargeCSV.js
 !src/components/generateEncodingList.js
 !src/licenses/generateThirdPartyLicenses.js
 build
-.nyc_output
