--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^2.1.1",
     "file-saver": "^2.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "node-fetch": "^2.6.0",
     "office-ui-fabric-react": "^6.213.0",
     "papaparse": "^4.6.3",
     "query-string": "^5.1.1",
