--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-merge": "^4.2.2"
-  },
-  "devDependencies": {
+    "webpack-merge": "^4.2.2",
     "@types/enzyme": "^3.10.5",
     "@types/mocha": "^5.2.7",
     "@types/sinon": "^7.5.2",
