--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "test": "TS_NODE_FILES=true TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' mocha $NODE_DEBUG_OPTION -r ts-node/register,test/setup.ts **/*.test.ts **/*.test.tsx",
     "lint": "eslint --ext .js,.ts,.tsx .",
-    "devServer": "webpack-dev-server --config webpack.dev.js",
+    "devServer": "webpack-dev-server --config webpack/dev.js",
     "validateManifest": "validate-office-addin manifests/dev.manifest.xml && validate-office-addin manifests/prod.manifest.xml",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack/prod.js"
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
