--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "scripts": {
     "test": "TS_NODE_FILES=true TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' mocha $NODE_DEBUG_OPTION -r ts-node/register,test/setup.ts **/*.test.ts **/*.test.tsx",
     "lint": "eslint --ext .js,.ts,.tsx .",
-    "devServer": "webpack-dev-server --config webpack.dev.js",
+    "devServer": "webpack-dev-server --config webpack/dev.js",
     "validateManifest": "validate-office-addin manifests/dev.manifest.xml && validate-office-addin manifests/prod.manifest.xml",
-    "build": "rm -rf build && webpack --config webpack.prod.js"
+    "build": "webpack --config webpack/prod.js"
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "@microsoft/office-js": "^1.1.38",
     "@types/file-saver": "^2.0.1",
     "@types/office-js": "0.0.166",
@@ -25,10 +25,10 @@
     "@types/react-router-dom": "^4.3.5",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.1",
-    "core-js": "^3.6.4",
-    "css-loader": "^2.1.1",
+    "core-js": "^3.6.5",
+    "css-loader": "^3.5.3",
     "file-saver": "^2.0.2",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.2.0",
     "node-fetch": "^2.6.0",
     "office-ui-fabric-react": "^6.213.0",
     "papaparse": "^4.6.3",
@@ -37,10 +37,10 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "source-map": "^0.7.3",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^5.4.5",
+    "style-loader": "^1.2.0",
+    "ts-loader": "^7.0.1",
     "typescript": "^3.8.3",
-    "webpack": "^4.42.1",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2",
     "@types/enzyme": "^3.10.5",
