--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
   },
   "nyc": {
     "all": true,
-    "exclude": ["**/*.d.ts"],
-    "extension": [".ts", ".tsx"],
-    "reporter": ["html"]
+    "exclude": [
+      "**/*.d.ts"
+    ],
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "reporter": [
+      "html"
+    ]
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
@@ -25,7 +32,7 @@
     "@microsoft/office-js": "^1.1.38",
     "@types/enzyme": "^3.10.5",
     "@types/file-saver": "^2.0.1",
-    "@types/mocha": "^5.2.7",
+    "@types/mocha": "^7.0.2",
     "@types/office-js": "0.0.166",
     "@types/papaparse": "^4.5.11",
     "@types/react": "^16.9.31",
@@ -35,7 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "@typescript-eslint/typescript-estree": "^2.26.0",
-    "assert": "^1.5.0",
+    "assert": "^2.0.0",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.6.5",
@@ -49,9 +56,9 @@
     "ignore-styles": "^5.0.1",
     "jsdom": "^16.2.2",
     "jsdom-global": "^3.0.2",
-    "mocha": "^6.2.3",
+    "mocha": "^7.1.2",
     "node-fetch": "^2.6.0",
-    "nyc": "^14.1.1",
+    "nyc": "^15.0.1",
     "office-addin-validator": "^1.0.5",
     "office-ui-fabric-react": "^6.213.0",
     "papaparse": "^4.6.3",
