--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
+    "@fluentui/react": "^7.107.5",
     "@microsoft/office-js": "^1.1.38",
     "@types/enzyme": "^3.10.5",
     "@types/file-saver": "^2.0.1",
     "@types/mocha": "^7.0.2",
     "@types/office-js": "0.0.166",
     "@types/papaparse": "^4.5.11",
-    "@types/react": "^16.9.31",
+    "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
-    "@types/react-router-dom": "^4.3.5",
+    "@types/react-router-dom": "^5.1.5",
     "@types/sinon": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
@@ -60,7 +61,6 @@
     "node-fetch": "^2.6.0",
     "nyc": "^15.0.1",
     "office-addin-validator": "^1.0.5",
-    "office-ui-fabric-react": "^6.213.0",
     "papaparse": "^4.6.3",
     "query-string": "^5.1.1",
     "react": "^16.13.1",
