--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/enzyme": "^3.10.5",
     "@types/file-saver": "^2.0.1",
     "@types/mocha": "^7.0.2",
-    "@types/office-js": "0.0.166",
+    "@types/office-js": "^1.0.96",
     "@types/papaparse": "^4.5.11",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
@@ -62,7 +62,7 @@
     "nyc": "^15.0.1",
     "office-addin-validator": "^1.0.5",
     "papaparse": "^4.6.3",
-    "query-string": "^5.1.1",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
