--- a/package.json
+++ b/package.json
@@ -65,7 +65,10 @@
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sinon": "^9.0.2",
     "source-map": "^0.7.3",
     "style-loader": "^1.2.0",
