--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Makoto",
   "scripts": {
     "build": "webpack --config webpack/prod.js",
-    "devServer": "webpack-dev-server --config webpack/dev.js",
+    "devServer": "webpack serve --config webpack/dev.js",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "test": "TS_NODE_FILES=true TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' mocha $NODE_DEBUG_OPTION -r ts-node/register,test/setup.ts **/*.test.ts **/*.test.tsx",
     "validateManifest": "validate-office-addin manifests/dev.manifest.xml && validate-office-addin manifests/prod.manifest.xml"
@@ -38,11 +38,11 @@
     "@types/papaparse": "^5.2.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.5",
+    "@types/react-router-dom": "^5.3.3",
     "@types/sinon": "^9.0.5",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "@typescript-eslint/typescript-estree": "^2.34.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "@typescript-eslint/typescript-estree": "^5.38.1",
     "assert": "^2.0.0",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.2",
@@ -50,10 +50,10 @@
     "css-loader": "^3.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.20.6",
+    "eslint": "^8.24.0",
+    "eslint-plugin-react": "^7.31.8",
     "file-saver": "^2.0.2",
-    "html-webpack-plugin": "^4.4.1",
+    "html-webpack-plugin": "^5.5.0",
     "ignore-styles": "^5.0.1",
     "jsdom": "^16.4.0",
     "jsdom-global": "^3.0.2",
@@ -66,18 +66,18 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sinon": "^9.0.3",
     "source-map": "^0.7.3",
     "style-loader": "^1.2.1",
-    "ts-loader": "^7.0.5",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   }
 }
