--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,9 @@ jobs:
           persist-credentials: false
       - uses: actions/setup-node@v1
         with:
-          node-version: '18.x'
-      - run: npm i
+          node-version: '21.x'
+          cache: 'npm'
+      - run: npm ci
       - run: npm run build
       - uses: JamesIves/github-pages-deploy-action@v4
         with:
