--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '18.x'
-      - run: npm i
+          node-version: '21.x'
+          cache: 'npm'
+      - run: npm ci
       - run: npm run test
 #      - run: npm run lint
