--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build
+      - run: cp -a ./static/* .
+        displayName: Copy static files to root
       - uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: build
