--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build
-      - run: cp -a ./static/* .
+      - run: cp -a -v ./static/* .
         name: Copy static files to root
       - uses: JamesIves/github-pages-deploy-action@v4
         with:
