--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,5 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run test
+      - run: cp -a -v ./static/* .
 #      - run: npm run lint
