--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,5 +27,5 @@ jobs:
         if: ${{ github.ref_type == 'tag' }}
         uses: actions/upload-pages-artifact@v2
         with:
-          path: .
+          path: build
       - uses: actions/deploy-pages@v2
