--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build
-      - run: cp -a -v ./static/* .
+      - run: cp -a -v ./static/* build
         name: Copy static files to root
       - name: Upload pages
         if: ${{ github.ref_type == 'tag' }}
