--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,11 +21,11 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build
-      - run: cp -a -v ./static/* .
+      - run: cp -a -v ./static/* build
         name: Copy static files to root
       - name: Upload pages
         if: ${{ github.ref_type == 'tag' }}
         uses: actions/upload-pages-artifact@v2
         with:
-          path: .
+          path: build
       - uses: actions/deploy-pages@v2
