--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-env": "^7.23.3",
     "@fluentui/react": "^7.204.0",
     "@microsoft/office-js": "^1.1.89",
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/enzyme": "^3.10.16",
     "@types/file-saver": "^2.0.7",
     "@types/mocha": "^7.0.2",
