--- a/package.json
+++ b/package.json
@@ -35,45 +35,46 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@types/enzyme": "^3.10.16",
     "@types/file-saver": "^2.0.7",
-    "@types/mocha": "^7.0.2",
+    "@types/mocha": "^10.0.4",
     "@types/office-js": "^1.0.359",
     "@types/papaparse": "^5.3.11",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/react-router-dom": "^5.3.3",
-    "@types/sinon": "^9.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "@typescript-eslint/typescript-estree": "^5.62.0",
+    "@types/sinon": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "@typescript-eslint/typescript-estree": "^6.11.0",
     "assert": "^2.1.0",
-    "babel-loader": "^8.3.0",
-    "copy-webpack-plugin": "^5.1.2",
+    "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.33.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^3.6.0",
+    "css-loader": "^6.8.1",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "file-saver": "^2.0.5",
     "html-webpack-plugin": "^5.5.3",
     "ignore-styles": "^5.0.1",
-    "jsdom": "^16.7.0",
+    "jsdom": "^22.1.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^7.2.0",
-    "node-fetch": "^2.7.0",
+    "mocha": "^10.2.0",
+    "node-fetch": "^3.3.2",
     "nyc": "^15.1.0",
     "office-addin-validator": "^1.0.5",
     "papaparse": "^5.4.1",
-    "query-string": "^5.1.1",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
-    "sinon": "^9.2.4",
+    "sinon": "^17.0.1",
     "source-map": "^0.7.4",
-    "style-loader": "^1.3.0",
-    "ts-loader": "^9.5.0",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
+    "typescript-plugin-css-modules": "^5.0.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
