--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,6 @@
     "jsx": "react",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "plugins": [
-      {"name": "typescript-plugin-css-modules"}
-    ]
+    "skipLibCheck": true
   }
 }
