--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "html-webpack-plugin": "^5.5.3",
     "ignore-styles": "^5.0.1",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^22.1.0",
     "jsdom-global": "^3.0.2",
     "node-fetch": "^3.3.2",
