--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --config webpack/prod.js",
     "devServer": "webpack serve --config webpack/dev.js",
     "lint": "eslint --ext .js,.ts,.tsx .",
-    "test": "cross-env TS_NODE_FILES=true TS_NODE_COMPILER_OPTIONS={\\\"module\\\":\\\"commonjs\\\"} mocha $NODE_DEBUG_OPTION -r ts-node/register,test/setup.ts --ignore 'node_modules/**/*' **/*.test.ts **/*.test.tsx",
+    "test": "jest components/DelimiterInput.test.tsx",
     "validateManifest": "validate-office-addin manifests/dev.manifest.xml && validate-office-addin manifests/prod.manifest.xml"
   },
   "nyc": {
@@ -30,12 +30,15 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.23.3",
     "@fluentui/react": "^8.112.8",
+    "@jest/globals": "^29.7.0",
     "@microsoft/load-themed-styles": "^2.0.88",
     "@microsoft/office-js": "^1.1.89",
     "@reduxjs/toolkit": "^1.9.7",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/enzyme": "^3.10.16",
     "@types/file-saver": "^2.0.7",
-    "@types/mocha": "^10.0.4",
     "@types/office-js": "^1.0.359",
     "@types/papaparse": "^5.3.11",
     "@types/react": "^18.2.37",
@@ -56,9 +59,9 @@
     "file-saver": "^2.0.5",
     "html-webpack-plugin": "^5.5.3",
     "ignore-styles": "^5.0.1",
-    "jsdom": "^22.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^10.2.0",
     "node-fetch": "^3.3.2",
     "nyc": "^15.1.0",
     "office-addin-validator": "^1.0.5",
@@ -71,6 +74,7 @@
     "sinon": "^17.0.1",
     "source-map": "^0.7.4",
     "style-loader": "^3.3.3",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
