--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --config webpack/prod.js",
     "devServer": "webpack serve --config webpack/dev.js",
     "lint": "eslint --ext .js,.ts,.tsx .",
-    "test": "jest components/DelimiterInput.test.tsx",
+    "test": "jest",
     "validateManifest": "validate-office-addin manifests/dev.manifest.xml && validate-office-addin manifests/prod.manifest.xml"
   },
   "nyc": {
@@ -44,11 +44,9 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/react-router-dom": "^5.3.3",
-    "@types/sinon": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "@typescript-eslint/typescript-estree": "^6.11.0",
-    "assert": "^2.1.0",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.33.2",
@@ -61,6 +59,7 @@
     "ignore-styles": "^5.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-extended": "^3.0.5",
     "jsdom-global": "^3.0.2",
     "node-fetch": "^3.3.2",
     "nyc": "^15.1.0",
@@ -71,7 +70,6 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
-    "sinon": "^17.0.1",
     "source-map": "^0.7.4",
     "style-loader": "^3.3.3",
     "ts-jest": "^29.1.1",
