--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,5 +39,18 @@
             ],
             "type": "node"
         },
+        {
+            "name": "Lint",
+            "request": "launch",
+            "runtimeArgs": [
+                "run-script",
+                "lint"
+            ],
+            "runtimeExecutable": "npm",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        }
     ]
 }
