replace with @fluentui/react-components

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@babel/preset-env": "^7.25.4",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.9.1",
-    "@fluentui/react": "^8.120.7",
+    "@fluentui/react-components": "^9.54.13",
+    "@fluentui/react-icons": "^2.0.257",
+    "@fluentui/react-theme": "^9.1.19",
     "@jest/globals": "^29.7.0",
     "@microsoft/load-themed-styles": "^2.0.140",
     "@microsoft/office-js": "^1.1.93",
