--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fluentui/react-components": "^9.54.13",
     "@fluentui/react-icons": "^2.0.257",
     "@fluentui/react-theme": "^9.1.19",
+    "@griffel/jest-serializer": "^1.1.29",
     "@jest/globals": "^29.7.0",
     "@microsoft/load-themed-styles": "^2.0.140",
     "@microsoft/office-js": "^1.1.93",
