--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "@microsoft/office-js": "^1.1.93",
     "@reduxjs/toolkit": "^2.2.7",
     "@stylistic/eslint-plugin": "^2.8.0",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/file-saver": "^2.0.7",
     "@types/office-js": "^1.0.420",
     "@types/papaparse": "^5.3.14",
