--- a/package.json
+++ b/package.json
@@ -73,5 +73,6 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0",
     "webpack-merge": "^6.0.1"
-  }
+  },
+  "packageManager": "yarn@4.9.2"
 }
