--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router": "^7.7.1",
     "react-router-dom": "^6.26.2",
     "scheduler": "^0.26.0",
     "source-map": "^0.7.4",
