--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,20 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v6
+
+      - name: Install corepack
+        run: npm install -g corepack
+
+      - uses: actions/setup-node@v6
         with:
-          node-version: '21.x'
-          cache: 'npm'
+          node-version: '25.x'
+          cache: 'yarn'
+
       - run: yarn install --immutable
+
       - run: yarn build
+
       - name: Upload pages
         if: ${{ github.ref_type == 'tag' }}
         uses: actions/upload-pages-artifact@v3
